@@ -33,14 +33,14 @@ pvm-insns.texi: $(top_srcdir)/libpoke/pvm.jitter $(srcdir)/gen-pvm-insns.sh
 
 # The documentation for poke settings is generated by poke itself.
 # This is to avoid replication.  The documentation of the settings
-# lives in poke/pk-settings.pk.
+# lives in poke/pk-cmd-set.pk.
 #
 # Note that if we are cross-compiling we generate an empty file.  This
 # is obviously not ideal, but it is not worse than failing.
 
 if NATIVE_BUILD
 
-poke-settings.texi: $(srcdir)/poke2texi.pk $(top_srcdir)/poke/pk-settings.pk
+poke-settings.texi: $(srcdir)/poke2texi.pk $(top_srcdir)/poke/pk-cmd-set.pk
 	$(top_builddir)/run poke -q -L $(srcdir)/poke2texi.pk --settings \
 	  > poke-settings.texi-tmp
 	mv poke-settings.texi-tmp poke-settings.texi
