@@ -1,4 +1,4 @@
-/* pk-copy.pk - `copy' command.  */
+/* pk-cmd-copy.pk - `copy' command.  */
 
 /* Copyright (C) 2020, 2021, 2022, 2023, 2024 Jose E. Marchesi */
 
