@@ -1,4 +1,4 @@
-/* pk-dump.pk - `dump' command.  */
+/* pk-cmd-dump.pk - `dump' command.  */
 
 /* Copyright (C) 2019, 2020, 2021, 2022, 2023, 2024 Jose E. Marchesi */
 
