@@ -1,4 +1,4 @@
-/* pk-extract.pk - `extract' command.  */
+/* pk-cmd-extract.pk - `extract' command.  */
 
 /* Copyright (C) 2020, 2021, 2022, 2023, 2024 Jose E. Marchesi */
 
