@@ -1,4 +1,4 @@
-/* pk-help.pk - poke online help subsystem.  */
+/* pk-cmd-help.pk - .help dot-command.  */
 
 /* Copyright (C) 2020, 2021, 2022, 2023, 2024 Jose E. Marchesi */
 
