@@ -1,4 +1,4 @@
-/* pk-cmd-ios.pk - IOS management dot-commands.  */
+/* pk-cmd-ios.pk - Dot-commands for operating on IO spaces.  */
 
 /* Copyright (C) 2024 Jose E. Marchesi */
 
