@@ -1,4 +1,4 @@
-/* pk-save.pk - `save' command.  */
+/* pk-cmd-save.pk - `save' command.  */
 
 /* Copyright (C) 2020, 2021, 2022, 2023, 2024 Jose E. Marchesi */
 
