@@ -1,4 +1,4 @@
-/* pk-scrabble.pk - `scrabble' command.  */
+/* pk-cmd-scrabble.pk - `scrabble' command.  */
 
 /* Copyright (C) 2020, 2021, 2022, 2023, 2024 Jose E. Marchesi */
 
