@@ -1,4 +1,4 @@
-/* pk-settings.pk - Global settings.  */
+/* pk-cmd-set.pk - Dot-commands to show and set properties.  */
 
 /* Copyright (C) 2021, 2022, 2023, 2024 Jose E. Marchesi */
 
